--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -1,5 +1,5 @@
 % ==============================================================================
-\chapter{Silicon theory}
+\chapter{Semiconductor detectors for radiation detection}
 \label{sec:SiliconTheory}
 %==============================================================================    
 \section{Properties of semiconductor material}
