--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -197,9 +197,10 @@
 %------------------------------------------------------------------------------
 % Add your chapters here - don't forget to also add them to \includeonly above
 \input{include/planning}
+\input{include/Introduction}
 \input{include/Silicon}
 \input{include/Calibration}
-\input{include/ActiveEdge}
+\input{include/ThinSensors}
 % Uncomment the following command to get references per chapter.
 % Put it inside the file or change \include to \input if you do not want the references
 % on a separate page
