The theory section is being written in Silicon.tex

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -80,6 +80,7 @@
 \newcommand{\ev}{\ensuremath{\mathrm{\,e\kern -0.1em V}}\xspace}
 \newcommand{\kev}{\ensuremath{\mathrm{\,ke\kern -0.1em V}}\xspace}
 \newcommand{\tev}{\ensuremath{\mathrm{\,Te\kern -0.1em V}}\xspace}
+\newcommand{\pev}{\ensuremath{\mathrm{\,Pe\kern -0.1em V}}\xspace}
 \newcommand{\megahertz}{\ensuremath{\mathrm{MHz}}\xspace}
 
 %% text shortcuts
