--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -60,3 +60,68 @@
   year={2012},
   abstract={During past five years VTT has actively developed edgeless detector fabrication process. The straightforward and high yield process relies on ion-implantation to activate the edges of the detector. A recent fabrication process was performed at VTT to provide p-on-n edgeless detectors. The layout contained DC- and AC-coupled strip detector and pixel detectors for Medipix/Timepix readouts. The fabricated detector thicknesses were 50, 100 and 150 μm. Electrical characterization was done for 5 × 5 mm 2 edgeless diodes on wafer level. All measured electrical parameters showed a dramatic dependence on the diode thickness. Leakage current was measured below 10 nA/cm 2 at full depletion. Calculation using a theoretical approximation indicates the diode surface generation current of less than 300 pA. The breakdown voltages were measured to be above 140 V and increased as a function of diode thickness. Reverse bias of 10 V is enough to fully deplete designed edgeless diodes. Leakage current dependence of temperature was investigated for both p-on-n and previous n-on-n edgeless detectors and results show that the leakage current doubles for every 8.5 degree Celsius rise in temperature. TCAD device simulations reveal that breakdown occurs at the lateral p-n junction where the electric field reaches its highest value. Thick edgeless diodes have wider bulk space that allows electric potential to drop and causes smaller curvature of the equipotential lines. This releases the accumulation of electric field at the corner of anode and increases the breakdown voltage. A good match of the simulated and the measured capacitance-voltage curves enables identification of proper parameters used in the simulation.}
 }
+
+@article{Beringer:1900zz,
+      author         = "Beringer, J. and others",
+      title          = "{Review of Particle Physics (RPP)}",
+      collaboration  = "Particle Data Group",
+      journal        = "Phys. Rev.",
+      volume         = "D86",
+      year           = "2012",
+      pages          = "010001",
+      doi            = "10.1103/PhysRevD.86.010001",
+      reportNumber   = "SLAC-REPRINT-2014-001",
+      SLACcitation   = "%%CITATION = PHRVA,D86,010001;%%"
+}
+
+@article{Bichsel,
+      author         = "Bichsel, H.",
+      title          = "{Straggling in Thin Silicon Detectors}",
+      journal        = "Rev. Mod. Phys.",
+      volume         = "60",
+      year           = "1988",
+      pages          = "663-699",
+      doi            = "10.1103/RevModPhys.60.663",
+      SLACcitation   = "%%CITATION = RMPHA,60,663;%%"
+}
+
+
+@article{Agostinelli:2002hh,
+      author         = "Agostinelli, S. and others",
+      title          = "{GEANT4: A Simulation toolkit}",
+      collaboration  = "GEANT4",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A506",
+      year           = "2003",
+      pages          = "250-303",
+      doi            = "10.1016/S0168-9002(03)01368-8",
+      reportNumber   = "SLAC-PUB-9350, FERMILAB-PUB-03-339",
+      SLACcitation   = "%%CITATION = NUIMA,A506,250;%%"
+}
+
+@article{Apostolakis:2000yu,
+      author         = "Apostolakis, J. and Giani, S. and Urban, L. and Maire, M.
+                        and Bagulya, A. V. and Grishin, V. M.",
+      title          = "{An implementation of ionisation energy loss in very thin
+                        absorbers for the GEANT4 simulation package}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A453",
+      year           = "2000",
+      pages          = "597-605",
+      doi            = "10.1016/S0168-9002(00)00457-5",
+      SLACcitation   = "%%CITATION = NUIMA,A453,597;%%"
+}
+
+@article{Apostolakis2009859,
+title = "Geometry and physics of the Geant4 toolkit for high and medium energy applications ",
+journal = "Radiation Physics and Chemistry ",
+volume = "78",
+number = "10",
+pages = "859 - 873",
+year = "2009",
+note = "Workshop on Use of Monte Carlo Techniques for Design and Analysis of Radiation Detectors ",
+issn = "0969-806X",
+doi = "http://dx.doi.org/10.1016/j.radphyschem.2009.04.026",
+url = "http://www.sciencedirect.com/science/article/pii/S0969806X09001650",
+author = "J. Apostolakis and M. Asai and A.G. Bogdanov and H. Burkhardt and G. Cosmo and S. Elles and G. Folger and V.M. Grichine and P. Gumplinger and A. Heikkinen and I. Hrivnacova and V.N. Ivanchenko and J. Jacquemier and T. Koi and R.P. Kokoulin and M. Kossov and H. Kurashige and I. McLaren and O. Link and M. Maire and W. Pokorski and T. Sasaki and N. Starkov and L. Urban and D.H. Wright",
+}
