--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -82,6 +82,7 @@
 \newcommand{\tev}{\ensuremath{\mathrm{\,Te\kern -0.1em V}}\xspace}
 \newcommand{\pev}{\ensuremath{\mathrm{\,Pe\kern -0.1em V}}\xspace}
 \newcommand{\megahertz}{\ensuremath{\mathrm{MHz}}\xspace}
+\newcommand{\cmsquared}{\ensuremath{\text{cm}^{2}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
