--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -125,3 +125,18 @@ doi = "http://dx.doi.org/10.1016/j.radphyschem.2009.04.026",
 url = "http://www.sciencedirect.com/science/article/pii/S0969806X09001650",
 author = "J. Apostolakis and M. Asai and A.G. Bogdanov and H. Burkhardt and G. Cosmo and S. Elles and G. Folger and V.M. Grichine and P. Gumplinger and A. Heikkinen and I. Hrivnacova and V.N. Ivanchenko and J. Jacquemier and T. Koi and R.P. Kokoulin and M. Kossov and H. Kurashige and I. McLaren and O. Link and M. Maire and W. Pokorski and T. Sasaki and N. Starkov and L. Urban and D.H. Wright",
 }
+
+@article{Jacoboni197777,
+title = "A review of some charge transport properties of silicon ",
+journal = "Solid-State Electronics ",
+volume = "20",
+number = "2",
+pages = "77 - 89",
+year = "1977",
+note = "",
+issn = "0038-1101",
+doi = "http://dx.doi.org/10.1016/0038-1101(77)90054-5",
+url = "http://www.sciencedirect.com/science/article/pii/0038110177900545",
+author = "C. Jacoboni and C. Canali and G. Ottaviani and A. Alberigi Quaranta",
+abstract = "This paper reviews the present knowledge of charge transport properties in silicon, with special emphasis on their application in the design of solid-state devices. Therefore, most attention is devoted to experimental findings in the temperature range around 300 K and to high-field properties. Phenomenological expressions are given, when possible, for the most important transport quantities as functions of temperature, field or impurity concentration. The discussion is limited to bulk properties, with only a few comments on surface transport. "
+}
