[ThinSensors.tex] Started the chapter on the results. Intermediate commit.

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -140,3 +140,17 @@ url = "http://www.sciencedirect.com/science/article/pii/0038110177900545",
 author = "C. Jacoboni and C. Canali and G. Ottaviani and A. Alberigi Quaranta",
 abstract = "This paper reviews the present knowledge of charge transport properties in silicon, with special emphasis on their application in the design of solid-state devices. Therefore, most attention is devoted to experimental findings in the temperature range around 300 K and to high-field properties. Phenomenological expressions are given, when possible, for the most important transport quantities as functions of temperature, field or impurity concentration. The discussion is limited to bulk properties, with only a few comments on surface transport. "
 }
+
+
+@article{Timepix3_Poikela,
+  author={T Poikela and J Plosila and T Westerlund and M Campbell and M De Gaspari and X Llopart and V Gromov and R Kluit and M van Beuzekom and F
+Zappon and V Zivkovic and C Brezina and K Desch and Y Fu and A Kruth},
+  title={Timepix3: a 65K channel hybrid pixel readout chip with simultaneous ToA/ToT and sparse readout},
+  journal={Journal of Instrumentation},
+  volume={9},
+  number={05},
+  pages={C05013},
+  url={http://stacks.iop.org/1748-0221/9/i=05/a=C05013},
+  year={2014}
+}
+	
