--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -198,9 +198,12 @@
 % Add your chapters here - don't forget to also add them to \includeonly above
 \input{include/planning}
 \input{include/Introduction}
+\input{include/CLIC}
 \input{include/Silicon}
 \input{include/Calibration}
 \input{include/ThinSensors}
+\input{include/Extrapolation}
+\input{include/Conclusions}
 % Uncomment the following command to get references per chapter.
 % Put it inside the file or change \include to \input if you do not want the references
 % on a separate page
